# timeseries-size-comparison

./: .gitignore  CMakeLists.txt  README.md
src/: comparison.cpp  csv.hpp  data.hpp  opentsdb.hpp  sqlite.hpp
testdata-multi/ts.merge/: fmerge.sorted.txt
testdata-single/ts/: host_117_cpu_idle_summation_1.ts
testdata-single/vs/: host_117_cpu_idle_summation_0.vs  host_117_cpu_idle_summation_1.vs  host_117_cpu_idle_summation_2.vs
